--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <div class="centered-text">
-            <h2>IFRC Disaster Response and Preparedness</h2>
+            <h2>The Montandon Platform</h2>
         </div> 
         <div class="red-box">
             <div class="black-lines">
